Fix #110155: Hiding entire overlay does not hide node previews

Pull Request: https://projects.blender.org/blender/blender/pulls/110163